--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,6 @@
 h1 {
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-  font-size: 34px;
+  font-size: 38px;
   padding: 10px 10px;
   text-align: center;
   text-transform: uppercase;
@@ -13,11 +13,25 @@ h1 {
       7px 7px 0px rgba(0, 0, 0, 0.2);
   }
 }
-    
+h3 { 
+    font-family: 'Indie Flower', cursive;
+    text-align: center;
+  /*font-size: 26px;
+  padding: 10px 10px;
+  text-align: center;
+  text-transform: uppercase;
+  text-rendering: optimizeLegibility;
+    color: black;
+    background-color: transparent;
+    letter-spacing: .05em;
+    text-shadow: 
+      4px 4px 0px #d5d5d5, 
+      7px 7px 0px rgba(0, 0, 0, 0.2);*/
 }
 
 h4 {
     font-family: 'Indie Flower', cursive;
+    text-align: center;
 }
 
 #start {
