--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,34 +13,29 @@ h1 {
       7px 7px 0px rgba(0, 0, 0, 0.2);
   }
 }
+
 h3 { 
     font-family: 'Indie Flower', cursive;
     text-align: center;
-  /*font-size: 26px;
-  padding: 10px 10px;
-  text-align: center;
-  text-transform: uppercase;
-  text-rendering: optimizeLegibility;
-    color: black;
-    background-color: transparent;
-    letter-spacing: .05em;
-    text-shadow: 
-      4px 4px 0px #d5d5d5, 
-      7px 7px 0px rgba(0, 0, 0, 0.2);*/
+    background-color: #ffcc00;
+    border-color: black;
+    border-style: dotted;
 }
 
 h4 {
     font-family: 'Indie Flower', cursive;
     text-align: center;
+    background-color: #ffcc00;
+    border-style: dotted;
 }
 
 #start {
     text-decoration: none;
-    border-style:solid;
-    border-color:white;
+    border-style: dotted;
+    border-color: #ffcc00;
     border-width:3px;
     padding:7px;
-    color:white;
+    color: #ffcc00;
     
 }
 p {
@@ -48,6 +43,10 @@ p {
 }
 
 h1 {
+    text-align:center;
+}
+
+#wrong1 {
     text-align:center;
 }
 #nugget{
