--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,5 @@
+
+
 h1 {
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   font-size: 38px;
@@ -46,8 +48,8 @@ h1 {
     text-align:center;
 }
 
-#wrong1 {
-    text-align:center;
+#buttons {
+    text-align: center;
 }
 #nugget{
     var ctx;
@@ -112,6 +114,8 @@ background-image: url("chickennugget.png");
     background-repeat: no-repeat;
     background-position: right top;
     background-attachment: fixed;
+    border-color: #ffcc00
+    border-style: dotted;
 }
 
 
